tests/NormalTests/paczka1/fuzzy1/41130306.err
Error in line 1: sSCp S493 49,4
Error in line 2: olIxIDNp A261 48,3
Error in line 7: iZnZ A261 51,8
Error in line 14: sSCp S328 44,4
Error in line 8: A261 S493 98,9
Error in line 12: iZnZ A459 24,6
Error in line 32: AFwBCQs S328 302,72
Error in line 27: SWpgKf S328 34,5
Error in line 28: AFwBCQs S328 74,8
